Opened 12 years ago
Closed 12 years ago
#9422 closed bug (fixed)
drivesetup: SegFaults when adding a partition to intel or GPT
Reported by: | jahaiku | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/DriveSetup | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Since the changes from tonight drivesetup SegFaults if you try to add a partition to intel or GPT. This is a gcc4 from hrev45227. Attached is the Stack-Trace.
Attachments (1)
Change History (8)
by , 12 years ago
Attachment: | DriveSetup-195-debug-02-02-2013-12-39-55.report added |
---|
comment:1 by , 12 years ago
Summary: | drivesetup → drivesetup: SegFaults when adding a partition to intel or GPT |
---|
comment:2 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 12 years ago
Version: | R1/alpha4.1 → R1/Development |
---|
comment:4 by , 12 years ago
comment:5 by , 12 years ago
That's odd, I could have sworn I tested this. Thanks for the investigation, Rene!
comment:6 by , 12 years ago
Status: | assigned → in-progress |
---|
Note:
See TracTickets
for help on using tickets.
The crash occurs because when CreateParametersPanel::AddControls() is called, _CreateViewControls() hasn't yet been called. Consequently it's calling CreateMenuBarLayoutItem() on an invalid pointer. Simply reordering things to call _CreateViewControls() first fixes the crash, but the resulting dialog doesn't look entirely correct.