DriveSetup: fixed crash in CreateParametersPanel.

* Changed order of calling Init() vs. _CreateViewControls(). This
  fixes bug #9422.
* The panel now hides (instead of disabling) the name or type control
  if those aren't supported, anyway.